<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_text3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/myFaculty"
        android:textColor="#641476"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_text6"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/tv_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/age"
        android:textColor="#641476"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_text5" />

    <TextView
        android:id="@+id/tv_text6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/faculty"
        android:textColor="#0091EA"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_text3"
        app:layout_constraintTop_toBottomOf="@+id/tv_text5" />

    <TextView
        android:id="@+id/tv_text5"
        android:layout_width="77dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/years"
        android:textColor="#0091EA"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/tv_text2"
        app:layout_constraintTop_toBottomOf="@+id/tv_text4"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="225dp"
        android:layout_marginTop="60dp"
        android:background="@color/blue"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/image3"
        app:strokeColor="@color/black"
        app:strokeWidth="10dp"
        tools:ignore="ContentDescription">

    </com.google.android.material.imageview.ShapeableImageView>

    <Button
        android:id="@+id/button1"
        android:layout_width="194dp"
        android:layout_height="67dp"
        android:layout_marginBottom="24dp"
        android:text="@string/update"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="82dp"
        android:layout_height="54dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/name"
        android:textColor="#0091EA"
        android:textColorHighlight="#673AB7"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/tv_text1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        />

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/MyName"
        android:textColor="#641476"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"

        app:layout_constraintVertical_bias="1.0"

        />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
